--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="banner-container">
         <h1>Impacto del Uso Excesivo de Redes Sociales en la Salud Mental de Adolescentes</h1>
-        <img src="mental.jpg" alt="imagen salud mental" class="banner-image">
+        <img src="4262399mora-stack/index/mental.jpg" alt="imagen salud mental" class="banner-image">
     </header>
 
     <div class="container">
@@ -179,5 +179,6 @@
 </html>
 
         
+
 
 
