--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="banner-container">
-        <h1>Impacto del Uso Excesivo de Redes Sociales en la Salud Mental de Adolescentes</h1>
+        <h1>Impacto del Uso Excesivo de Redes Sociales en la Salud Mental de Adolescentes Delere</h1>
         <img src="4262399mora-stack/index/mental.jpg" alt="imagen salud mental" class="banner-image">
     </header>
 
@@ -179,6 +179,7 @@
 </html>
 
         
+
 
 
 
